--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel='stylesheet' href='https://gitcdn.xyz/repo/angular/bower-material/v0.11.0/angular-material.css'>
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/main2.css">
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-animate.min.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.min.js'></script>
