--- a/resume.html
+++ b/resume.html
@@ -118,7 +118,7 @@
       </md-content>
     </section>
   </div>
-</body><script src="/css/live.js"></script>
+</body><script src="/resgen/css/live.js"></script>
 
 
 </html>
