--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
         </md-toolbar>
         <md-content class="md-padding" style="background-color: #f9f9f9;">
           <h1>Education</h1>
-          <md-card max-width="1000px">
+          <md-card>
             <md-card-header>
               <md-card-header-text>
                 <span class="md-headline">{{sections.education.major}} <span class="md-subhead" style="color: rgb(0,180,195); float:right;">{{sections.education.graduationYear}}</span></span>
