--- a/resume.html
+++ b/resume.html
@@ -116,7 +116,7 @@
         </md-content>
       </md-content>
     </section>
-</body><script src="/resgen/css/live.js"></script>
+</ body><script src="./css/live.js"></script>
 
 
 </html>
