--- a/resume.html
+++ b/resume.html
@@ -12,6 +12,7 @@
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-sanitize.min.js'></script>
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/assets-cache.js'></script>
   <script src="https://cdn.octoblu.com/js/meshblu/latest/meshblu.bundle.js" type="text/javascript"></script>
+  <script src="./js/json.js"></script>
   <script src="./js/resume.js"></script>
 
 </head>
