--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
         </md-content>
       </md-sidenav>
       <!--Content-->
-      <md-content>
+      <md-content layout="column">
         <md-toolbar class="md-theme-indigo">
           <div class="md-toolbar-tools">
             <h2>
