--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <md-card-title-text class="md-padding">
         <span class="md-headline">Login</span>
       </md-card-title-text>
-        <md-button class="md-raised md-primary" ng-href="/resgen/login.html">Login</md-button>
-        <md-button class="md-raised md-primary" ng-href="/resgen/register.html">Register</md-button>
+        <md-button class="md-raised md-primary" ng-href="./login.html">Login</md-button>
+        <md-button class="md-raised md-primary" ng-href="./register.html">Register</md-button>
     </md-card>
   </md-content>
 
